# ic

./: BUILD.bazel  Cargo.toml  MODULE.bazel  WORKSPACE.bazel  go_deps.bzl  mainnet-artifacts.bzl  mainnet-canisters.bzl  mainnet-canisters.json  subnets.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: ci-generate-ci.yml  ci-main.yml  ci-pr-only.yml  release-testing.yml  rosetta-release.yml  schedule-daily.yml  schedule-hourly.yml  schedule-rust-bench.yml  schedule-weekly.yml  system-tests-k8s.yml
.github/workflows-source/: ci-main.yml  ci-pr-only.yml  release-testing.yml  schedule-daily.yml  schedule-hourly.yml
bazel/: README.md  external_crates.bzl  mainnet-canisters.bzl  pocket-ic-tests.bzl  prost.bzl  subnets.bzl
bazel/conf/: .bazelrc.build
bazel/exporter/: BUILD.bazel
ci/container/: TAG
ic-os/: defs.bzl
ic-os/components/setupos-scripts/: check-hardware.sh  check-network.sh  functions.sh  install-guestos.sh  install-hostos.sh  setup-hostos-config.sh  setupos.sh
ic-os/setupos/: README.adoc
ic-os/setupos/context/: extra_boot_args
rs/bitcoin/ckbtc/kyt/: BUILD.bazel
rs/bitcoin/kyt/: BUILD.bazel  defs.bzl
rs/bitcoin/kyt/src/: fetch.rs  state.rs
rs/bitcoin/kyt/src/fetch/: tests.rs
rs/bitcoin/kyt/src/state/: tests.rs
rs/consensus/src/consensus/: catchup_package_maker.rs  validator.rs
rs/execution_environment/src/: execution_environment.rs
rs/execution_environment/src/execution_environment/: tests.rs
rs/execution_environment/src/execution_environment/tests/: canister_snapshots.rs
rs/execution_environment/src/scheduler/: test_utilities.rs  tests.rs
rs/ic_os/config/src/: lib.rs
rs/nervous_system/agent/src/: pocketic_impl.rs
rs/nervous_system/integration_tests/: BUILD.bazel  Cargo.toml
rs/nervous_system/integration_tests/src/: pocket_ic_helpers.rs
rs/nervous_system/integration_tests/tests/: advance_target_version.rs
rs/nervous_system/tools/sync-with-released-nevous-system-wasms/src/: main.rs
rs/nns/governance/: BUILD.bazel
rs/nns/governance/canister/: canister.rs
rs/nns/governance/src/: test_utils.rs
rs/nns/integration_tests/: BUILD.bazel  Cargo.toml
rs/pocket_ic_server/src/: main.rs
rs/sns/cli/: test_sns_init_v2.yaml
rs/sns/governance/canister/: governance.did  governance_test.did
rs/sns/governance/proto/ic_sns_governance/pb/v1/: governance.proto
rs/sns/governance/src/: governance.rs  sns_upgrade.rs
rs/state_machine_tests/src/: lib.rs
rs/state_manager/src/: lib.rs  tip.rs
rs/state_manager/tests/: state_manager.rs
rs/test_utilities/execution_environment/src/: lib.rs
rs/tests/: kubeconfig_extension.bzl
rs/tla_instrumentation/tla_instrumentation/tests/: structs.rs
